# self_hyde

./: .env.example  .gitignore  README.md  create_corpus.py  demo.py  demo_hyde.py  demo_self_hyde.py  evals.py  evals_hyde.py  evals_self_hyde.py  evaluate_squad.py  new_york_corpus.json  nyc_rag_evaluation_results.json  pyproject.toml
src/hyde/: __init__.py  config.py  generator.py  hyde.py  promptor.py  searcher.py  segment_scorer.py
tests/: test_config.py  test_generator.py  test_hyde.py  test_searcher.py  test_segment_scorer.py
